2.0.4:
* Added DigitalText connection support
* Fixed a bug where having no connections would cause the GUI to never load
* Changed /rw to StealthBot-style rewhisper
* Reorganized the Settings class
* Added a BNLS bot id
* Changed the way commands respond to fit a more object-oriented model
* Changed the "What's New" window's layout to use cards instead of tabs.

2.0.3.1 (r1100) 2008-01-21:
* Added a setting to customize the userlist display format
* Added a setting to customize the command response display format
* Added a setting to enable the HTMLOutput plugin
* Moved the HTMLOutput userlist to logs
* Added highlighting of "my user" in the userlist
* Improved version comparison logic
* Removed the checkbox to disable the GUI from the GUI
* Disabled resizing of configuration windows
* Added logic to prevent KeyManager from choking on tabs
* Addressed a common problem with Derby and CommandEventHandler.touchUser() 
* Added BNetUser.toStringEx() to display ping and flags
* Fixed a bug where 'commander access' was not passed to commands properly
* Added a 'setauth' command
* Added a version editor utility
* Added an option to disable tab completion
* Added an option to disable minimize to system tray

2.0.3 (r1072) 2008-01-07:
* Completely redesigned the command subsystem to fit a more object-oriented model
* Commands not in the database will be created with maximum (master) access
* Changed server, port, and channel to profile-specific fields
* Replaced EventHandler semaphores with synchronized code blocks
* Fixed a race condition with joining restricted channels
* Fixed a bug with selecting CD keys
* Added lag icons
* Improved the logic for constructing the text label on each profile tab
* Configurable tray notifications
* Fixed a bug where it was impossible to stay disconnected
* Connect/disconnect/reconnect affect each connection of a profile
* Multiple commands can be used at once with a semicolon delimiter
* Added a 'rejoin' command