@@ -5,7 +5,8 @@
 * Reorganized the Settings class
 * Added a BNLS bot id
 * Changed the way commands respond to fit a more object-oriented model
-* Changed the "What's New" window's layout to use cards instead of tabs.
+* Changed the "What's New" window's layout to use cards instead of tabs
+* Removed the database tab from the settings window
 
 2.0.3.1 (r1100) 2008-01-21:
 * Added a setting to customize the userlist display format
